fix: heading tag hierarchy fix: added missing background color

--- a/assets/scss/component/_article.scss
+++ b/assets/scss/component/_article.scss
@@ -48,7 +48,7 @@ article {
 .new-articles {
   padding: 20px;
   background-color: $Very-dark-blue;
-  h2 {
+  h3 {
     @include article-element();
     font-size: 38px;
     color: $Soft-orange;
