--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   color: hsl(236deg, 13%, 42%);
   font-size: 15px;
   font-weight: 400;
+  background-color: hsl(36deg, 100%, 99%);
 }
 
 a {
@@ -170,7 +171,7 @@ article img {
   padding: 20px;
   background-color: hsl(240deg, 100%, 5%);
 }
-.new-articles h2 {
+.new-articles h3 {
   margin-bottom: 20px;
   font-size: 38px;
   color: hsl(35deg, 77%, 62%);
